# System_Time_Analysis_Cilent_Side

./: .gitignore  CMakeLists.txt  README.md  REUSE.toml  iSure.files  iSure.qmlproject  iSure.qrc  qmlmodules  qt_attribution.json  test_fix.js  vcpkg.json
content/: App.qml  BottomBarForm.ui.qml  CMakeLists.txt  DeviceManagementView.qml  DeviceManagementViewForm.ui.qml  DeviceScrollView.qml  DeviceScrollViewForm.ui.qml  DeviceTable.qml  DeviceTableForm.ui.qml  DeviceTablePaneForm.ui.qml  HomePageForm.ui.qml  HostResourceInfo.qml  SettingsViewForm.ui.qml  SideBarForm.ui.qml  VirtualMachineItem.qml  VirtualMachineItemForm.ui.qml  VirtualMachineOption.qml  VirtualMachineOptionForm.ui.qml  VirtualMachineScrollView.qml  VirtualMachineScrollViewForm.ui.qml  VirtualMachineSwipeViewForm.ui.qml  VirtualMachineView.qml  VirtualMachineViewForm.ui.qml
imports/: CMakeLists.txt
imports/CustomControls/: CMakeLists.txt  CustomRoundButton.qml  CustomSwitch.qml  qmldir
imports/SystemSimulator/: CMakeLists.txt  ConfigDialog.qml  GridCell.qml  RtaAnalysisPage.qml  RtaPage.qml  RtaParamPage.qml  SimulatorPage.qml  ganttpainteritem.cpp  ganttpainteritem.h  rtaclient.cpp  rtaclient.h  simulationclient.cpp  simulationclient.h
imports/VirtualMachine/: AppSettings.qml  CMakeLists.txt  Constants.qml  VirtualMachineModel.qml  qmldir
proto/: shyper.proto
src/: DeviceInfo.h  NetworkManager.cpp  NetworkManager.h  RustShyperInfo.h  VirtualMachineInfo.h  import_qml_plugins.h  main.cpp
